--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        <activity android:name=".galaxy.GalaxyGame"
-            android:screenOrientation="landscape"
+        <activity android:name=".MainActivity"
+             
              >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity android:name=".galaxy.GalaxyGame"
+            android:screenOrientation="landscape"
+             >
+            
         </activity>
     </application>
 
