add ignor files
add ignor files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 /bin
 /gen
+.idea/modules.xml
+.idea/misc.xml
+LearningGLES.iml
+.idea/workspace.xml
+.idea/modules.xml
+.idea/modules.xml
+.idea/.name
+.idea/.name
+.idea/misc.xml
+.idea/modules.xml
+.idea/modules.xml
