add  ingnore  file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ LearningGLES.iml
 .idea/modules.xml
 .idea/modules.xml
 /target
+.idea/compiler.xml
+.idea/compiler.xml
+.idea/modules.xml
+src/main/main.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/compiler.xml
