--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,12 @@
              >
             
         </activity>
+
+        <activity android:name=".testFBO.TestFboActivity"
+
+                >
+
+        </activity>
     </application>
 
 </manifest>
