add  build info  to deploy on jcenter

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 09 16:40:24 CST 2015
+#Wed Sep 09 17:21:31 CST 2015
+bintray.apikey=184ab455645a5b2ff36075b02271e275eba7a2e3
 sdk.dir=E\:\\Program Files\\Android\\sdk
+bintray.user=davidleen
